Add a flag field so we can filter by flagged todos.  Also test database migration.
